# graphics-25-26-KRRai-Git

./: REFERENCES.md
Coursework/Pathtracer/Spider-Scene/: Spidey scene OBJ.mtl
Coursework/Rasteriser/: CMakeLists.txt  main.cpp
Coursework/Rasteriser/models/: Asgard_Bed.mtl  Asgard_Floor.mtl  Asgard_Pillar.mtl  Bed_Palenquin.mtl  Spidey_Arms.mtl
Coursework/Raytracer/: TexturedLambertianShader.hpp  main.cpp
Coursework/Raytracer/models/: Asgard_BackgroundBack.mtl  Spidey_Head.mtl  Spidey_Torso.mtl  Spidey_legs3.mtl
Labs/week1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Lab1.sln  Task1.cpp  Task1.vcxproj  Task1.vcxproj.filters  Task2.cpp  Task2.vcxproj  Task2.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Labs/week2/: Lab2.sln  Task1.cpp  Task2.cpp  Vector3.hpp
Labs/week4/Builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Lab4.sln  Task1.vcxproj  Task1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Labs/week5/Builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Lab5.sln  Task1.vcxproj  Task1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Labs/week6/: Main.cpp
Labs/week6/Builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Lab6.sln  Task1.vcxproj  Task1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Labs/week8/: Task1.cpp  Task2.cpp
Labs/week8/Builds/: CMakeCache.txt  (+10 more)
Spider-Scene/: Test Scene.glb  TestScene.mtl  TestScene2.mtl
(+66 files in other folders)
